<resources>
    <string name="app_name">NewExpensesApp</string>

    <string name="cronos_regular">CronosPro-Regular.ttf</string>
    <string name="source_scans_bold">source-sans-pro.bold.ttf</string>
    <string name="source_scans_regular">source-sans-pro.regular.ttf</string>
    <string name="source_scans_semibold">source-sans-pro.semibold.ttf</string>
    <string name="lato_bold">Lato-Bold.ttf</string>
    <string name="lato_medium">Lato-Medium.ttf</string>
    <string name="lato_regular">Lato-Regular.ttf</string>

    <!--login screen-->
    <string name="thrymr_expenses_app">Thrymr Expenses App</string>
    <string name="logo">logo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="title">Employee Expenses</string>
    <string name="employee_expenses">Employee Expenses</string>

    <string-array name="nav_drawer_items">
        <item>Employee Expenses </item>
        <item>Expenses</item>
        <item>Notification</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tripname">Singapore Trip</string>
    <string name="trip_date">12-02-2017</string>
    <string name="expenses_name">Cab</string>
    <string name="date_of_bill">Date Of Bill :</string>
    <string name="date_of_bill_tv">02-05-2017</string>
    <string name="details">Bill Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="details_tv">I want  Kapil Tawor to  Patanjali office.</string>
    <string name="total_amount_tv">$500</string>
    <string name="bill_picture">Bill Picture</string>
    <string name="approve">Approve</string>
    <string name="reject_btn">Reject</string>
    <string name="expenses">Expenses</string>


    <string name="nav_expense">Expenses</string>
    <string name="choose_expenses_tv">ChooseExpenses</string>
    <string name="upload_picture">Upload Bill Picture</string>
    <string name="save">Save</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="enter_trip_date_edtv">Enter Trip Date</string>
    <string name="trip_name">Trip Name</string>

    <string name="logout">Logout</string>
    <string name="like_to_logout">Would you like to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
